# models/schemas/orderSchema.py
@@ -1,19 +1,16 @@
 from . import ma
 from marshmallow import fields
 
-# (
-#     "customer_id": int,
-#     "product_ids": [ints]
-# )
 
 class OrderSchema(ma.Schema): #Inherting our instance of Marshmallow 
     id = fields.Integer(required=False) #This will be auto-incremented
+    order_date = fields.Date(required= False)
     customer_id = fields.Integer(required=True)
     product_id = fields.Integer(required=True)
     quantity = fields.Integer(required=True) 
 
     class Meta:
-        fields = ("id", "customer_id", "product_id", "quantity") #all fields that could be coming in and going out when validating data
+        fields = ("id", 'order_date', "customer_id", "product_id", "quantity") #all fields that could be coming in and going out when validating data
 
 order_schema = OrderSchema() #instantiate a single customer schema
 orders_schema = OrderSchema(many=True)
